# wayfire-kbdd-plugin

./: .gitignore  README.md  build_and_install.sh  meson.build
metadata/: kbdd.xml  meson.build
src/: kbdd.cpp  meson.build  xkb_utils.cpp  xkb_utils.hpp
