example_plugin = shared_module('kbdd',
                               ['kbdd.cpp', 'xkb_utils.cpp'],
                               dependencies: [wayfire, wlroots, wfconfig, xkbcommon, xkbregistry],
                               install: true,
                               install_dir: join_paths(get_option('libdir'), 'wayfire'))
